# geoimgconv

./: ChangeLog.txt  README.md  build_CodeBlocks_debug.bat  build_CodeBlocks_release.bat  build_VS2008.bat  build_VS2015.bat  build_VS2015_x64.bat  build_VS2017.bat  build_VS2017_x64.bat  build_cb_mingw32_debug.bat  build_cb_mingw32_release.bat  build_cb_mingw64_debug.bat  build_cb_mingw64_release.bat  clean.bat  detect_vs2017.bat  libs_licenses.txt  makefile  readme.txt  readme_linux.txt  readme_windows.txt
2bin/: editable_run.bat  help.bat  huangrun101.bat  huangrun201.bat  huangrun301.bat  readme.txt  simplerun101.bat  simplerun201.bat
WinDepsBuild/: build_boost_mingw32.bat  build_boost_mingw64.bat  build_boost_vs2008.bat  build_boost_vs2015.bat  build_boost_vs2015_x64.bat  build_boost_vs2017.bat  build_boost_vs2017_x64.bat  build_gdal_mingw32.bat  build_gdal_mingw64.bat  build_gdal_mingwX_patch_and_configure.sh  build_gdal_vs2008.bat  build_gdal_vs2015.bat  build_gdal_vs2015_x64.bat  build_gdal_vs2017.bat  build_gdal_vs2017_x64.bat  build_iconv_mingw32.bat  build_iconv_mingw64.bat  build_icu_mingw32.bat  build_icu_mingw64.bat  build_icu_vs2015.bat  build_icu_vs2015_x64.bat  build_icu_vs2017.bat  build_icu_vs2017_x64.bat  detect_vs2017.bat  install_boost_mingw32.bat  install_boost_mingw64.bat  install_boost_vs2008.bat  install_boost_vs2015.bat  install_boost_vs2015_x64.bat  install_boost_vs2017.bat  install_boost_vs2017_x64.bat  install_gdal_mingw32.bat  install_gdal_mingw64.bat  install_gdal_vs2008.bat  install_gdal_vs2015.bat  install_gdal_vs2015_x64.bat  install_gdal_vs2017.bat  install_gdal_vs2017_x64.bat  install_iconv_mingw32.bat  install_iconv_mingw64.bat  (+7 more)
docs/: Huang_algo.txt  logo.xcf  logo_small.xcf  readme.txt  readme_libs_mingw32.txt  readme_libs_mingw64.txt  readme_libs_vs2008.txt  readme_libs_vs2015.txt  readme_libs_vs2015_x64.txt  readme_libs_vs2017.txt  readme_libs_vs2017_x64.txt
docs/wiki_pages/: PageText_About.txt  PageText_Screens.txt  readme.txt
source/: CMakeLists.txt  alt_matrix.cpp  alt_matrix.h  alt_matrix_base.h  app_config.cpp  app_config.h  appui_console.cpp  appui_console.h  appui_console_callback.cpp  appui_console_callback.h  base_filter.h  call_back_base.h  common.cpp  common.h  errors.cpp  errors.h  filter_base.cpp  filter_base.h  main.cpp  median_filter.cpp  median_filter.h  median_filter_base.cpp  median_filter_base.h  median_filter_huang.cpp  median_filter_huang.h  median_filter_stub.cpp  median_filter_stub.h  median_filter_stupid.cpp  median_filter_stupid.h  pixel_type_speciefic_filter.cpp  pixel_type_speciefic_filter.h  pixel_type_speciefic_filter_base.h  real_median_filter.cpp  real_median_filter.h  real_median_filter_base.h  real_median_filter_huang.cpp  real_median_filter_huang.h  real_median_filter_stub.cpp  real_median_filter_stub.h  real_median_filter_stupid.cpp  (+7 more)
source/cmake_modules/: FindPDCurses.cmake
source/tests/: common_vars.h  image_comparer.cpp  image_comparer.h  main_tests.cpp  median_filter_tests.cpp
source/tests/test_data/: in_cint16.tif  in_float32.tif  in_float32.tif.aux.xml  in_float64.tif  in_float64.tif.aux.xml  in_int16.tif  in_int32.tif  in_int32.tif.aux.xml  in_uint16.tif  in_uint32.tif  in_uint8.tif  in_uint8.tif.aux.xml  out_101_float32.tif  out_101_float64.tif  out_101_int16.tif  out_101_int32.tif  out_101_uint16.tif  out_101_uint32.tif  out_101_uint8.tif  out_31_float32.tif  out_31_float64.tif  out_31_int16.tif  out_31_int32.tif  out_31_uint16.tif  out_31_uint32.tif  out_31_uint8.tif  test_layers.qgs
